grafana/webhook-receiver/k8s/webhook.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webhook
spec:
  selector:
    app: webhook
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook
  template:
    metadata:
      labels:
        app: webhook
    spec:
      containers:
        - name: webhook
          image: flytux/grafana-webhook-receiver 
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: recipients-config
              mountPath: /config/recipients.yaml
              subPath: recipients.yaml
              readOnly: true
      volumes:
        - name: recipients-config
          configMap:
            name: webhook-recipients-config
